<resources>
    <string name="app_name">sculture</string>
    <string name="action_settings">Settings</string>
    <string name="prompt_name">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_unmatched_password">Passwords are not matched</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="wantRegister">Don\'t have account? Click to register</string>
    <string name="wantLogin">Have a account? Click to login</string>
    <string name="error_invalid_username">Invalid username</string>
    <string name="login">Login</string>
    <string name="title_activity_story_create">Create Your Story</string>
    <string name="userLogin">Current user:</string>
    <string name="loginAdvice">To access all features, please sign up!</string>
    <string name="logout">Log out</string>
    <string name="search">Search</string>
    <string name="placeholder_title">TITLE</string>
    <string name="login_register">Login/Register</string>
    <string name="updated_time">Updated %1$s by %2$s</string>
    <string name="written_by_username">Written by %s</string>
    <string name="action_save">Save</string>
    <string name="prompt_title">Title</string>
    <string name="prompt_story">Story</string>
    <string name="prompt_tags">Tags</string>
    <string name="action_add_media">Add Image</string>
    <string name="already_logged">All ready logged in</string>
    <string name="comment">Comment</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="enter_description">Enter description</string>
    <string name="click_to_write">Click to write a description</string>
    <string name="follow">Follow</string>
    <string name="stories_of_this_user">Stories of this user:</string>
    <string name="action_report">Report</string>
    <string name="report_success">Thank you for your report. We will investigate this story.</string>
    <string name="vote_success">Thank you for your feedback.</string>
    <string name="unfollow">Unfollow</string>
    <string name="no_connection">There is no Internet connection.</string>
    <string name="user_exist">This user already exists.</string>
    <string name="user_not_exist">This user does not exist.</string>
    <string name="wrong_password">Wrong password</string>
    <string name="error_occurred">An error occurred</string>
    <string name="access_toke_error">Your session is ended. Please log in again.</string>
    <string name="action_edit">Edit</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="action_delete">Delete</string>
    <string name="deleted">The story is deleted.</string>
    <string name="delete_message">Do you want to delete this story?</string>
    <string name="invalid_title">Title cannot be empty</string>
    <string name="invalid_content">Content cannot be empty</string>
    <string name="no_desc">No description about %s</string>
    <string name="written_by">Written by</string>
</resources>
