<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        card_view:cardCornerRadius="2dp"
        card_view:contentPadding="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/story_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="TITLE"
                android:textSize="36sp" />

            <TextView

                android:id="@+id/story_creation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/written_by_username"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/storyContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="CONTENT" />


            <android.support.v7.widget.RecyclerView
                android:id="@+id/story_media_recycler"
                android:layout_width="match_parent"
                android:layout_height="@dimen/story_media_height" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/storyTags"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:padding="4dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_gravity="center_vertical"
                    android:text="TAGS" />

                <TextView
                    android:id="@+id/story_update"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_gravity="center_vertical"
                    android:gravity="right"
                    android:text="@string/updated_time"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/likeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/thumb_up_inactive" />

                <ImageButton
                    android:id="@+id/dislikeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/thumb_down_inactive" />

            </LinearLayout>


        </LinearLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>